# monadic-hypervisor

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  linker.ld  pull-private-configs.sh  push-private-configs.sh
.cargo/: config.toml
.github/agents/: Bare_Metal_Executor.agent.md  LD_PRELOAD_Architect.agent.md  Principal_Data_Plane_Architect.agent.md  Staff-Monadic-Hypervisor-R&D-Engineer.agent.md  Technical_Publishing_Agent.agent.md  Tensorplane_DevEnv_Builder.agent.md
.github/prompts/: antigravity.prompt.md
.github/skills/lead-control-plane-ux/: SKILL.md
.github/workflows/: generate_pdf.yml
arch/arm64/boot/: boot.S
docs/: ADR-001-Zero-Kernel-Strict-No-Std.md  PROGRESS_LEDGER.md  SILICON_OBSERVATIONS.md  VISION.md
docs/publications/cloud-hypervisor-io-research/: README.md
scripts/: setup-toolchain.sh
scripts/spdk-aws/: .env.template  README.md  cloud-init-userdata.yaml  iam-role-setup.sh  provision-graviton.sh  start-graviton.ps1  start-graviton.sh  stop-graviton.sh
src/: main.rs
src/dataplane/: poll.rs
src/hw/: mod.rs  viommu.rs
src/mm/: mod.rs  stage2.rs
